Fixed random gap in form when error message shows

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -218,3 +218,7 @@ input[type=tel] {
   position: absolute;
   right: 0;
 }
+
+.field_with_errors {
+  display: inline;
+}
